Fixed BUG#14723: Dumping of stored functions seems to cause corruption                  in the function body   Changed the way the end of query was found from the lex state.   The routine body was not extracted correctly when using the   /*!version ... */ wrapper (in dump files); for some types of routines   (e.g. with a label at the first begin), the trailing "*/" was not skipped.   This is a recommit for the 5.0.16-release tree.

mysql-test/r/sp.result:
  New test case for BUG#14723.
mysql-test/t/sp.test:
  New test case for BUG#14723.
sql/sp_head.cc:
  Changed the way the end of the definition and body is found from the lex state.
  In the case of /*!version */ wrappers we must take the trailing " */" into account.